# aw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  config.kdl
.llm/commit-queue/done/: 1781040250166-add-aw-tab-bar-plugin-support-d23d78.json
agents/.agents/: AGENTS.md  README.md  souls.md
agents/.agents/policies/: code-standards.md  docs.md  frontend.md  git.md  quality.md  testing.md
agents/.agents/skills/x-ascii-mockup/: SKILL.md
agents/.agents/skills/x-boundary-audit/: SKILL.md
agents/.agents/skills/x-code-review/: SKILL.md
agents/.agents/templates/: project.md
completions/: _aw  aw.bash
docs/: workspace-tools.md
examples/basic-website/: default.tabs
plugins/aw-tab-bar/: README.md
plugins/aw-tab-bar/src/: main.rs  state.rs
src/: cli.rs  main.rs  profile.rs  repo.rs
src/commit/: mod.rs
src/commit/queue/: check.rs  mod.rs  paths.rs  store.rs  types.rs
src/core/: error.rs  help.rs  mod.rs  paths.rs
src/git/: health.rs  mod.rs  owned_commit.rs  raw_policy.rs
src/install/: mod.rs
src/pkg/: mod.rs
src/runtime/: mod.rs  queue_lock.rs
src/workspace/: brush_worktree.rs  mod.rs
src/zellij/: helpers.rs  layout.rs  mod.rs  profile.rs  tab_order.rs  tabs.rs  watcher.rs
tests/: cli_contract.rs  commit_cli_contract.rs  git_queue_contract.rs  install_contract.rs  launch_contract.rs  layout_contract.rs  repo_contract.rs  tab_order_contract.rs  watcher_contract.rs  workspace_cli_contract.rs  workspace_tasks_contract.rs
tests/support/: command.rs  fake_zellij.rs  mod.rs  temp.rs
(+30 files in other folders)
