[package]
name = "agent-workspace"
version = "0.1.0"
edition = "2021"
description = "Agent Workspace CLI for portable agent adapters and shared commit-owner queues."
license = "MIT"
repository = "https://github.com/goobits/agent-workspace"
readme = "README.md"

[[bin]]
name = "aw"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
